[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tab-models"
version = "0.1.0"
description = "A collection of machine learning model wrappers for tabular data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["machine-learning", "tabular-data", "xgboost", "lightgbm", "neural-networks", "tabnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "pytorch-tabnet>=3.1.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
gpu = [
    "cupy-cuda11x>=10.0.0; sys_platform == 'linux' and python_version >= '3.8'",
    "cupy-cuda12x>=12.0.0; sys_platform == 'linux' and python_version >= '3.8'",
]

[project.urls]
Homepage = "https://github.com/yourusername/tab-models"
Repository = "https://github.com/yourusername/tab-models"
Documentation = "https://github.com/yourusername/tab-models#readme"
"Bug Tracker" = "https://github.com/yourusername/tab-models/issues"
"Source Code" = "https://github.com/yourusername/tab-models"

[tool.setuptools.packages.find]
include = ["tab-models*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html" 
